Fixed nav menu light/dark mode

--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,6 @@ nav ul li {
 nav ul li a {
   text-decoration: none;
   color: var(--header-footer-text-light);
-  transition: color 0.3s ease;
 }
 
 nav ul li a:hover {
